--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 exclude:  [README.md, Gemfile, Gemfile.lock, Procfile, sass, config.rb, config.ru]
-permalink: /posts/:title/
+permalink: /:title/
 lsi: false
