--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+url: http://nshipster.com
 title: NSHipster
 description: <strong>NSHipster</strong> is a journal of the overlooked bits in Objective-C and Cocoa. Updated weekly.
 exclude:  [README.md, Gemfile, Gemfile.lock, Procfile, sass, config.rb, config.ru]
