--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 url: http://nshipster.com
 title: NSHipster
-description: <strong>NSHipster</strong> is a journal of the overlooked bits in Objective-C and Cocoa. Updated weekly.
+description: "<strong>NSHipster</strong> is a journal of the overlooked bits in Objective-C and Cocoa. Updated weekly."
 exclude:  [README.md, Gemfile, Gemfile.lock, Procfile, sass, config.rb, config.ru]
 permalink: /:title/
 lsi: false
