--- a/_config.en.yml
+++ b/_config.en.yml
@@ -5,10 +5,15 @@ url: http://nshipster.com
 title: NSHipster
 description: "<strong>NSHipster</strong> is a journal of the overlooked bits in Objective-C and Cocoa. Updated weekly."
 permalink: /:title/
+timezone: America/Los_Angeles
 lsi: false
+
 markdown: redcarpet
-pygments:
-  lexer: objective-c
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "disable_indented_code_blocks", "autolink", "strikethrough", "highlight", "superscript", "tables", "footnotes", "with_toc_data"]
+
+highlighter: pygments
+
 
 groups:
   - Foundation
