Setting timezone for NSHipster.cn

--- a/_config.zh.yml
+++ b/_config.zh.yml
@@ -5,6 +5,7 @@ url: http://nshipster.cn
 title: NSHipster
 description: "<strong>NSHipster</strong> 关注被忽略的 Objective-C 和 Cocoa 特性。每周更新。"
 permalink: /:title/
+timezone: Asia/Shanghai
 lsi: false
 markdown: redcarpet
 pygments:
