--- a/_config.en.yml
+++ b/_config.en.yml
@@ -3,7 +3,7 @@ source: ./nshipster.com
 url: http://nshipster.com
 
 title: NSHipster
-description: "<strong>NSHipster</strong> is a journal of the overlooked bits in Objective-C and Cocoa. Updated weekly."
+description: "<strong>NSHipster</strong> is a journal of the overlooked bits in Objective-C, Swift, and Cocoa. Updated weekly."
 permalink: /:title/
 timezone: America/Los_Angeles
 lsi: false
