--- a/tidy.conf
+++ b/tidy.conf
@@ -9,7 +9,7 @@ indent: true
 input-encoding: utf8
 language: en
 literal-attributes: true
-new-blocklevel-tags: section,nav,article,aside,hrgroup,header,footer,mark,hgroup,figure,figcaption,wb:share-button
+new-blocklevel-tags: section,nav,article,aside,hrgroup,header,footer,mark,hgroup,figure,figcaption,wb:share-button,svg,g,path
 new-empty-tags: link,i
 new-inline-tags: link,video,audio,canvas,time
 numeric-entities: false
