--- a/_config.en.yml
+++ b/_config.en.yml
@@ -15,13 +15,10 @@ redcarpet:
 highlighter: pygments
 
 groups:
-  - Foundation
-  - CoreFoundation
-  - CoreGraphics
-  - UIKit
+  - Cocoa
   - Objective-C
+  - Swift
   - Open Source
-  - MapKit
   - Xcode
   - Trivia
   - Miscellanea
