--- a/nshipster.com/_data/authors.yml
+++ b/nshipster.com/_data/authors.yml
@@ -5,5 +5,5 @@ mattt:
   twitter: mattt
   github: mattt
   google: 106751358503565042647
-  bio: "[Mattt Thompson](http://mattt.me) is the creator & maintainer of [AFNetworking](https://github.com/afnetworking/afnetworking) and other popular [open-source projects](https://github.com/mattt), including [Postgres.app](http://postgresapp.com), [Helios](http://helios.io), & [Nomad](http://nomad-cli.com)."
+  bio: "[Mattt Thompson](http://mattt.me) is the creator & maintainer of [AFNetworking](https://github.com/afnetworking/afnetworking) and other popular [open-source projects](https://github.com/mattt), including [Postgres.app](http://postgresapp.com), [ASCIIwwdc](http://asciiwwdc.com) and [Nomad](http://nomad-cli.com)."
 
