--- a/_config.en.yml
+++ b/_config.en.yml
@@ -7,6 +7,9 @@ description: "<strong>NSHipster</strong> is a journal of the overlooked bits in 
 permalink: /:title/
 timezone: America/Los_Angeles
 
+google: 105091289906267717942
+issn: 2373-9800
+
 markdown: redcarpet
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "disable_indented_code_blocks", "autolink", "strikethrough", "highlight", "superscript", "tables", "footnotes", "with_toc_data"]
