--- a/nshipster.com/_data/authors.yml
+++ b/nshipster.com/_data/authors.yml
@@ -1,4 +1,4 @@
-mattt:
+"Mattt Thompson":
   name: Mattt Thompson
   email: mattt@nshipster.com
   url: http://mattt.me
@@ -6,4 +6,3 @@ mattt:
   github: mattt
   google: 106751358503565042647
   bio: "[Mattt Thompson](http://mattt.me) is the creator & maintainer of [AFNetworking](https://github.com/afnetworking/afnetworking) and other popular [open-source projects](https://github.com/mattt?tab=repositories), including [Postgres.app](http://postgresapp.com), [ASCIIwwdc](http://asciiwwdc.com) and [Nomad](http://nomad-cli.com)."
-
