--- a/nshipster.com/_data/books.yml
+++ b/nshipster.com/_data/books.yml
@@ -1,6 +1,6 @@
 nshipster:
   title: "NSHipster: Obscure Topics in Cocoa & Objective-C"
-  description: "To be an NSHipster is to care deeply about the craft of writing code. In cultivating a deep understanding and appreciation of Objective-C, its frameworks and ecosystem, one is able to create apps that delight and inspire users. Combining articles from NSHipster.com with new essays, this book is the essential guide for modern iOS and Mac OS X developers."
+  excerpt: "To be an NSHipster is to care deeply about the craft of writing code. In cultivating a deep understanding and appreciation of Objective-C, its frameworks and ecosystem, one is able to create apps that delight and inspire users. Combining articles from NSHipster.com with new essays, this book is the essential guide for modern iOS and Mac OS X developers."
   image: "//cdn.nshipster.com/images/book-cover@2x.png"
   formats:
     ebook:
@@ -11,7 +11,7 @@ nshipster:
 cfhipsterref:
   title: "CFHipsterRef: Low-Level Programming on iOS & Mac OS X"
   summary: "Perfect for intermediate and expert developers wanting to take a deeper dive into advanced topics, _CFHipsterRef: Low-Level Programming on iOS & Mac OS X_ covers the core technologies powering Cocoa, Objective-C, and the operating system itself, including Core Bluetooth, Accelerate, and the Objective-C runtime."
-  description: "Perfect for intermediate and expert developers wanting to take a deeper dive into advanced topics, CFHipsterRef: Low-Level Programming on iOS & Mac OS X covers the core technologies powering Cocoa, Objective-C, and the operating system itself, including Core Bluetooth, Accelerate, and the Objective-C runtime."
+  excerpt: "Perfect for intermediate and expert developers wanting to take a deeper dive into advanced topics, CFHipsterRef: Low-Level Programming on iOS & Mac OS X covers the core technologies powering Cocoa, Objective-C, and the operating system itself, including Core Bluetooth, Accelerate, and the Objective-C runtime."
   image: "//cdn.nshipster.com/images/cfhipsterref-cover@2x.png"
   formats:
     pdf:
@@ -23,7 +23,7 @@ cfhipsterref:
 nshipster-fake-book-objective-c:
   title: "The NSHipster Fake Book (Objective-C)"
   summary: "Over 200 code samples, ranging from the beginner and basic to the expert and obscure, across a variety of genres and use cases. Without any needless explanation."
-  description: "Fake books are an indispensable tool for jazz musicians. They contain the melody, rhythm, and chord changes for hundreds of standards, allowing a player to jump into any session cold, and 'fake it' through any tunes outside their repertoire. It's not sheet music, but rather the essence of tunes.
+  excerpt: "Fake books are an indispensable tool for jazz musicians. They contain the melody, rhythm, and chord changes for hundreds of standards, allowing a player to jump into any session cold, and 'fake it' through any tunes outside their repertoire. It's not sheet music, but rather the essence of tunes.
 
 > Cm11 B9 B♭m9 A♭13 G13  and trade fours with the tenor.
 
