Changing top-level categories for NSHipster.cn

--- a/_config.zh.yml
+++ b/_config.zh.yml
@@ -15,11 +15,7 @@ redcarpet:
 highlighter: pygments
 
 groups:
-  - Foundation
-  - CoreFoundation
-  - CoreGraphics
-  - UIKit
+  - Cocoa
   - Objective-C
   - Open Source
-  - Trivia
   - Miscellanea
