--- a/nshipster.com/_data/books.yml
+++ b/nshipster.com/_data/books.yml
@@ -6,22 +6,24 @@ nshipster:
   formats:
     ebook:
       isbn: 978-0-9912182-2-6
+    pdf:
+      isbn: 978-0-9912182-3-3
   availability: in_stock
   url: https://gum.co/nshipster
   price: 19.99
+  category: Media > Books > Non-Fiction > Technology Books
+  isbn: 978-0-9912182-2-6
 
 cfhipsterref:
   title: "CFHipsterRef: Low-Level Programming on iOS & Mac OS X"
   author: Mattt Thompson
   summary: "Perfect for intermediate and expert developers wanting to take a deeper dive into advanced topics, _CFHipsterRef: Low-Level Programming on iOS & Mac OS X_ covers the core technologies powering Cocoa, Objective-C, and the operating system itself, including Core Bluetooth, Accelerate, and the Objective-C runtime."
   image: "//cdn.nshipster.com/images/cfhipsterref-cover@2x.png"
-  formats:
-    pdf:
-      price: 29.99
-      isbn: ...
   availability: pre_order
   url: https://gum.co/cfhipsterref
   price: 29.99
+  category: Media > Books > Non-Fiction > Technology Books
+  isbn: 978-0-9912182-4-0
 
 nshipster-fake-book-objective-c:
   title: "The NSHipster Fake Book (Objective-C)"
@@ -35,3 +37,5 @@ nshipster-fake-book-objective-c:
   availability: in_stock
   url: https://gum.co/the-nshipster-fake-book
   price: 19.99
+  category: Media > Books > Non-Fiction > Technology Books
+  isbn: 978-0-9912182-1-9
