--- a/nshipster.com/_data/authors.yml
+++ b/nshipster.com/_data/authors.yml
@@ -1,7 +1,7 @@
 "Mattt Thompson":
   name: Mattt Thompson
   email: mattt@nshipster.com
-  url: http://mattt.me
+  url: https://twitter.com/mattt
   twitter: mattt
   github: mattt
   google: 106751358503565042647
