--- a/nshipster.cn/_data/translators.yml
+++ b/nshipster.cn/_data/translators.yml
@@ -1,7 +1,9 @@
 "Andrew Yang":
   name: "Andrew Yang"
-  bio: ""
-  gravatar: ""
+  email: younthu@gmail.com
+  url: http://robotyzy.com
+  github: younthu
+  bio: "iOS开发者，11年之前做过很长时间windows后台程序的开发。很喜欢移动应用开发，发布过一些小应用，有一个[个人网站](http://robotyzy.com)，你可以尝试和网站上的机器人聊天，希望你不要失望。"
 "Candyan":
   name: "Candyan"
   bio: ""
