Adding Lin Xiangyu to translators

--- a/nshipster.cn/_data/translators.yml
+++ b/nshipster.cn/_data/translators.yml
@@ -24,6 +24,10 @@
   name: "JJ Mao"
   bio: ""
   gravatar: ""
+"Lin Xiangyu":
+  name: "Lin Xiangyu"
+  bio: ""
+  gravatar: ""
 "Ricky Tan":
   name: "Ricky Tan"
   email: ricky.tan.xin@gmail.com
