add Croath Liu; modify Ricky Tan

--- a/nshipster.cn/_data/translators.yml
+++ b/nshipster.cn/_data/translators.yml
@@ -10,8 +10,13 @@
   gravatar: ""
 "Croath Liu":
   name: "Croath Liu"
-  bio: ""
-  gravatar: ""
+  email: Croath.Liu@gmail.com
+  url: https://croath.com
+  twitter: croath
+  github: croath
+  google: 108566152424457191834
+  gravatar: 720e8ba099f10eca25dd87ef5afe4aa7
+  bio: "云游四海的工程师"
 "David Liu":
   name: "David Liu"
   bio: ""
@@ -32,7 +37,7 @@
   name: "Ricky Tan"
   email: ricky.tan.xin@gmail.com
   url: http://rickytan.cn
-  bio: "Ricky Tan 是iZJU iOS 版 3.1.3 以前版本及后台的开发者，另有浙大网址导航 iStudy Chrome 插件等。[更多请稳步](https://github.com/rickytan?tab=repositories)。"
+  bio: "Ricky Tan 是[iZJU](https://itunes.apple.com/cn/app/izju/id573810521?mt=8) iOS 版 3.1.3 以前版本及后台的开发者，另有浙大网址导航 [iStudy Chrome](https://chrome.google.com/webstore/detail/istudy%E7%BD%91%E5%9D%80%E5%AF%BC%E8%88%AA/ppnjhnpamphipkobgebknecdjcgpjfkd?hl=zh-CN&utm_source=chrome-ntp-launcher) 插件等。[更多请移步](https://github.com/rickytan?tab=repositories)。"
   gravatar: 71f0bbfbb3b0bc7e6e9aa2187814196a
   github: rickytan
   google: +rickytanx
