--- a/_config.en.yml
+++ b/_config.en.yml
@@ -7,6 +7,7 @@ description: "<strong>NSHipster</strong> is a journal of the overlooked bits in 
 permalink: /:title/
 timezone: America/Los_Angeles
 
+facebook: 418545184954768
 google: 105091289906267717942
 issn: 2373-9800
 
