--- a/nshipster.com/_data/authors.yml
+++ b/nshipster.com/_data/authors.yml
@@ -5,4 +5,5 @@
   twitter: mattt
   github: mattt
   google: 106751358503565042647
+  gravatar: f32c3cab150e7018cbe4d00401f597e2
   bio: "[Mattt Thompson](http://mattt.me) is the creator & maintainer of [AFNetworking](https://github.com/afnetworking/afnetworking) and other popular [open-source projects](https://github.com/mattt?tab=repositories), including [Postgres.app](http://postgresapp.com), [ASCIIwwdc](http://asciiwwdc.com) and [Nomad](http://nomad-cli.com)."
