--- a/nshipster.com/_data/books.yml
+++ b/nshipster.com/_data/books.yml
@@ -1,7 +1,7 @@
 nshipster:
   title: "NSHipster: Obscure Topics in Cocoa & Objective-C"
   author: Mattt Thompson
-  summary: "To be an NSHipster is to care deeply about the craft of writing code. In cultivating a deep understanding and appreciation of Objective-C, its frameworks and ecosystem, one is able to create apps that delight and inspire users. Combining articles from NSHipster.com with new essays, this book is the essential guide for modern iOS and OS X developers."
+  summary: "Combining articles from NSHipster.com with new essays, this book is the essential guide for modern iOS and OS X developers."
   image: "//cdn.nshipster.com/images/book-cover@2x.png"
   formats:
     ebook:
@@ -17,7 +17,7 @@ nshipster:
 cfhipsterref:
   title: "CFHipsterRef: Low-Level Programming on iOS & OS X"
   author: Mattt Thompson
-  summary: "Perfect for intermediate and expert developers wanting to take a deeper dive into advanced topics, _CFHipsterRef: Low-Level Programming on iOS & OS X_ covers the core technologies powering Cocoa, Objective-C, and the operating system itself, including Core Bluetooth, Accelerate, and the Objective-C runtime."
+  summary: "Perfect for intermediate and expert developers wanting to take a deeper dive into advanced topics, _CFHipsterRef: Low-Level Programming on iOS & OS X_ covers the core technologies powering Cocoa, Objective-C, and the operating system itself, including Grand Central Dispatch, Accelerate, and the Objective-C runtime."
   image: "//cdn.nshipster.com/images/cfhipsterref-cover@2x.png"
   availability: pre_order
   url: https://gum.co/cfhipsterref
