Updating Mike's author information

--- a/nshipster.com/_data/authors.yml
+++ b/nshipster.com/_data/authors.yml
@@ -10,12 +10,12 @@
 "Mike Lazer-Walker":
   name: Mike Lazer-Walker
   email: michael@lazerwalker.com
-  url: https:/twitter.com/lazerwalker
+  url: http:/twitter.com/lazerwalker
   twitter: lazerwalker
   github: lazerwalker
   google: ""
   image: http://nshipster.s3.amazonaws.com/mike-lazer-walker.jpg
-  bio: "Mike Lazer-Walker is an independent app and game developer, and the creator of [F***ing Block Syntax](https://fuckingblocksyntax.com). He frequently writes about engineering and design on his [blog](https://blog.lazerwalker.com)."
+  bio: "[Mike Lazer-Walker](http://lazerwalker.com) is an independent app and game developer, and the creator of [F***ing Block Syntax](http://goshdarnblocksyntax.com). He frequently writes about engineering and design on his [blog](http://blog.lazerwalker.com)."
 "Nate Cook":
   name: Nate Cook
   email: nate@natecook.com
