--- a/nshipster.com/_data/authors.yml
+++ b/nshipster.com/_data/authors.yml
@@ -1,3 +1,21 @@
+"Delisa Mason":
+  name: Delisa Mason
+  email: delisa.mason@gmail.com
+  url: https://twitter.com/kattrali
+  twitter: kattrali
+  github: kattrali
+  google: ""
+  image: "http://nshipster.s3.amazonaws.com/delisa-mason.jpg"
+  bio: "[Delisa Mason](http://delisa.me) is the creator of the Xcode Package Manager, [Alcatraz](http://alcatraz.io), as well as a [CocoaPods](http://cocoapods.org) Core Team member."
+"Jack Flintermann":
+  name: Jack Flintermann
+  email: jack@stripe.com
+  url: https://twitter.com/jflinter
+  twitter: jflinter
+  github: jflinter
+  google: ""
+  image: "http://nshipster.s3.amazonaws.com/jack-flintermann.jpg"
+  bio: "[Jack Flintermann](http://twitter.com/jflinter) is a software developer at [Stripe](https://stripe.com/). He lives in New York City."
 "Mattt Thompson":
   name: Mattt Thompson
   email: mattt@nshipster.com
