Transitioning authors to collection and adding contributor section and pages

--- a/_config.en.yml
+++ b/_config.en.yml
@@ -20,6 +20,11 @@ highlighter: pygments
 
 exclude: ["articles", "books", "training"]
 
+collections:
+  authors:
+    output: true
+    permalink: /authors/:path/
+
 groups:
   - Cocoa
   - Objective-C
