Adding redirect gem

--- a/_config.en.yml
+++ b/_config.en.yml
@@ -20,6 +20,9 @@ highlighter: pygments
 
 exclude: ["articles", "books", "training"]
 
+gems:
+  - jekyll-redirect-from
+
 collections:
   authors:
     output: true
