Add April's profile

--- a/nshipster.cn/_data/translators.yml
+++ b/nshipster.cn/_data/translators.yml
@@ -4,6 +4,12 @@
   url: http://robotyzy.com
   github: younthu
   bio: "iOS开发者，11年之前做过很长时间windows后台程序的开发。很喜欢移动应用开发，发布过一些小应用，有一个[个人网站](http://robotyzy.com)，你可以尝试和网站上的机器人聊天，希望你不要失望。"
+"April Peng":
+  name: "April Peng"
+  email: april.pyl@gmail.com
+  url: http://aprilme.com
+  github: aprilnov
+  bio: "做 iOS / Mac / Web 开发的大白羊妹子~"
 "Bob Liu":
   name: "Bob Liu"
   bio: ""
