--- a/_config.zh.yml
+++ b/_config.zh.yml
@@ -19,3 +19,37 @@ groups:
   - Objective-C
   - Open Source
   - Miscellanea
+
+collections:
+  authors:
+    output: true
+    permalink: /authors/:path/
+  translators:
+    output: true
+    permalink: /translators/:path/
+
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      layout: "default"
+  -
+    scope:
+      path: ""
+      type: "authors"
+    values:
+      layout: "author"
+  -
+    scope:
+      path: ""
+      type: "translators"
+    values:
+      layout: "translator"
+  -
+    scope:
+      path: ""
+      type: "post"
+    values:
+      layout: "post"
+
