Hiding single language code block labels

--- a/_config.en.yml
+++ b/_config.en.yml
@@ -45,6 +45,7 @@ defaults:
       path: ""
     values:
       layout: "default"
+      hiddenlang: "swift,objective-c"
   -
     scope:
       path: ""
