Update pygments, add Smartypants rendering.

--- a/_config.en.yml
+++ b/_config.en.yml
@@ -14,7 +14,7 @@ issn: 2373-9800
 
 markdown: redcarpet
 redcarpet:
-  extensions: ["no_intra_emphasis", "fenced_code_blocks", "disable_indented_code_blocks", "autolink", "strikethrough", "highlight", "superscript", "tables", "footnotes", "with_toc_data"]
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "disable_indented_code_blocks", "autolink", "strikethrough", "highlight", "superscript", "tables", "footnotes", "with_toc_data", "smart"]
 
 highlighter: pygments
 
