--- a/_config.en.yml
+++ b/_config.en.yml
@@ -8,6 +8,8 @@ description: "<strong>NSHipster</strong> is a journal of the overlooked bits in 
 permalink: /:title/
 timezone: America/Los_Angeles
 
+asseturl: http://nshipster.s3.amazonaws.com
+
 twitter: 629523445
 facebook: 418545184954768
 google: 105091289906267717942
